# Ascii-Art-Generator

./: CMakeLists.txt  README.md
qml/: main.qml
src/: backend.cpp  backend.h  main.cpp
